--- a/style.css
+++ b/style.css
@@ -53,3 +53,8 @@ button{
   justify-content:space-between;
   margin-bottom:15px;
 }
+.logo{
+  max-width:150px;
+  display:block;
+  margin:0 auto 15px;
+}
